--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,3 +19,15 @@ jobs:
           requirements: 'requirements.txt'
           upload_exe_with_name: 'ExcelTool'
           options: --onefile, --name "ExcelTool", -c,
+
+  pyinstaller-build-mac:
+    runs-on: macos-latest
+    steps:
+      - name: Create Executable
+        uses: sayyid5416/pyinstaller@v1
+        with:
+          python_ver: '3.13'
+          spec: 'excel.py'
+          requirements: 'requirements.txt'
+          upload_exe_with_name: 'ExcelTool'
+          options: --onefile, --name "ExcelTool", -c,
