--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,9 @@ jobs:
       - name: Create Executable
         uses: sayyid5416/pyinstaller@v1
         with:
-          python_ver: '3.13'
-          spec: 'excel.py'
+          python_ver: '3.8'
+          python_arch: 'x86'
+          spec: 'main.py'
           requirements: 'requirements.txt'
           upload_exe_with_name: 'ExcelTool-Win'
           options: --onefile, --name "ExcelTool-Win", -c,
@@ -26,8 +27,8 @@ jobs:
       - name: Create Executable
         uses: sayyid5416/pyinstaller@v1
         with:
-          python_ver: '3.13'
-          spec: 'excel.py'
+          python_ver: '3.8'
+          spec: 'main.py'
           requirements: 'requirements.txt'
           upload_exe_with_name: 'ExcelTool-Mac'
           options: --onefile, --name "ExcelTool-Mac", -c,
