--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,20 @@ jobs:
           upload_exe_with_name: 'ExcelTool-Win'
           options: --onefile, --name "ExcelTool-Win", -c,
 
+jobs:
+  pyinstaller-build:
+    runs-on: windows-latest
+    steps:
+      - name: Create Executable
+        uses: sayyid5416/pyinstaller@v1
+        with:
+          python_ver: '3.13'
+          python_arch: 'x64'
+          spec: 'main.py'
+          requirements: 'requirements.txt'
+          upload_exe_with_name: 'ExcelTool-Win64'
+          options: --onefile, --name "ExcelTool-Win64", -c,
+
   pyinstaller-build-mac:
     runs-on: macos-latest
     steps:
