--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,18 @@ on:
   workflow_dispatch:  # 允许手动触发
 
 jobs:
+  pyinstaller-build-space:
+    runs-on: windows-latest
+    steps:
+      - name: Create Executable
+        uses: sayyid5416/pyinstaller@v1
+        with:
+          python_ver: '3.8'
+          python_arch: 'x86'
+          spec: 'space.py'
+          requirements: 'requirements.txt'
+          upload_exe_with_name: 'ExcelTool-Win-space'
+          options: --onefile, --name "ExcelTool-Win-space", -c,
   pyinstaller-build:
     runs-on: windows-latest
     steps:
